# isic-challenge-scoring

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: Dockerfile  config.yml
.github/workflows/: ci.yml  docker.yml  release.yml
Python/: scoreCommon.py  scoreP1.py  scoreP2.py  scoreP2B.py  scoreP3.py  scoreSubmission.py
isic_challenge_scoring/: __init__.py  __main__.py  classification.py  confusion.py  exception.py  load_csv.py  load_image.py  metrics.py  requirements.txt  scoreCommon.py  scoreP1.py  scoreP2.py  scoreP3.py  segmentation.py  task1.py  task2.py  task3.py  types.py  unzip.py
test/: conftest.py  test_load_csv.py  test_load_image.py  test_metrics.py  test_metrics_binary.py  test_metrics_comparative.py  test_metrics_multiclass.py  test_p3.py  test_task1.py  test_task3.py
tests/: conftest.py  test_classification.py  test_load_csv.py  test_load_image.py  test_metrics_binary.py  test_metrics_comparative.py  test_metrics_multiclass.py  test_segmentation.py  test_task1.py  test_task2.py  test_task3.py
tests/data/classification/groundtruth/: ISIC2018_Task3_GroundTruth.csv
tests/data/classification/prediction/: ISIC2018_Task3_prediction.csv
tests/data/task3/prediction/: ISIC2018_Task3_GroundTruth_prediction.csv
