[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "isic-challenge-scoring"
description = "Submission scoring for the ISIC Challenge."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache 2.0" }
maintainers = [{ name = "ISIC Archive", email = "support@isic-archive.com" }]
keywords = [
  "challenge",
  "isic",
  "isic-challenge",
  "scoring"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click",
  "click-pathlib",
  "numpy",
  "pandas>=1.1",
  "pillow>=7",
  "rdp",
  "scipy",
  "scikit-learn",
  "zipfile-deflate64",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ImageMarkup/isic-challenge-scoring"
"Bug Reports" = "https://github.com/ImageMarkup/isic-challenge-scoring/issues"

[project.scripts]
isic-challenge-scoring = "isic_challenge_scoring.__main__:cli"

[dependency-groups]
lint = [
  "flake8",
  "flake8-black",
  "flake8-bugbear",
  "flake8-docstrings",
  "flake8-isort",
  "flake8-quotes",
  "pep8-naming",
]
format = [
  "black",
  "isort",
]
type = [
  "mypy",
  {include-group = "test"},
]
test = [
  "pytest",
]

[tool.hatch.build]
packages = [
  "isic_challenge_scoring",
]

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.mypy]
files = [
  "isic_challenge_scoring",
]
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  # Test utilies should be imported absolutely from the pythonpath,
  # so use the Pytest-reccomended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
]
filterwarnings = [
  "error",
  # The "rdp" package is unmaintained and calls "numpy.cross" in a harmless but deprecrated way
  "ignore:Arrays of 2-dimensional vectors are deprecated:DeprecationWarning:rdp",
]
testpaths = [
  "tests",
]
